--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,8 @@
 # https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners#codeowners-syntax
 
 
-/samples/**/*.py                           @bradmiro @googleapis/python-samples-owners
+# The @googleapis/yoshi-python is the default owner for changes in this repo
+*               @googleapis/yoshi-python
+
+# The python-samples-reviewers team is the default owner for samples changes
+/samples/**/*.py   @googleapis/python-samples-owners
