--- a/.github/.OwlBot.yaml
+++ b/.github/.OwlBot.yaml
@@ -18,6 +18,9 @@ docker:
 deep-remove-regex:
   - /owl-bot-staging
 
+deep-preserve-regex:
+  - /owl-bot-staging/v1beta2
+
 deep-copy-regex:
   - source: /google/cloud/dataproc/(v.*)/.*-py/(.*)
     dest: /owl-bot-staging/$1/$2
