--- a/samples/snippets/requirements.txt
+++ b/samples/snippets/requirements.txt
@@ -6,3 +6,4 @@ google-auth-httplib2==0.1.0
 google-cloud==0.34.0
 google-cloud-storage==2.3.0
 google-cloud-dataproc==4.0.2
+google-cloud-container==2.10.7
