--- a/samples/snippets/requirements.txt
+++ b/samples/snippets/requirements.txt
@@ -1,4 +1,5 @@
 
+pprint==3.10.4
 backoff==2.0.1
 grpcio==1.46.3
 google-auth==2.6.6
@@ -7,3 +8,4 @@ google-cloud==0.34.0
 google-cloud-storage==2.3.0
 google-cloud-dataproc==4.0.2
 google-cloud-container==2.10.7
+google-api-python-client==2.49.0
