--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
     ".": {
       "release-type": "python",
       "extra-files": [
+        "google/cloud/dataproc_v1/gapic_version.py",
         "google/cloud/dataproc/gapic_version.py",
         {
           "type": "json",
